Terminando Corona Roja

--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <script src="js/app.js"></script>
+    <script src="js/cerrarModalySwiper.js"></script>
     <script src="js/idioma.js"></script>
     <script src="js/scroll.js"></script>
 
