errores de js e imagenes corregidos

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <div class="producto__info">
                         <h4 class="producto__nombre" data-section="productos" data-value="titleMiel">Miel Pura - 1kg</h4>
                         <p class="producto__descripcion" data-section="productos" data-value="descripcion">Frasco de vidrio, 100% miel natural sin conservantes.</p>
-                        <a href="#" class="producto__btn" data-section="productos" data-value="boton">Ver producto</a>
+                        <button class="producto__btn" type="button" data-section="productos" data-value="boton">Ver producto</button>
                         <img src="img/estrellas.png" alt="Valoración: 5 estrellas" class="producto__estrellas">
                      </div>
                 </div>
@@ -148,7 +148,7 @@
                     <div class="producto__info">
                         <h4 class="producto__nombre" data-section="productos" data-value="titleMiel-2">Miel Pura - 500g</h4>
                         <p class="producto__descripcion" data-section="productos" data-value="descripcion-2">Envase de vidrio, tamaño ideal para uso diario.</p>
-                        <a href="#" class="producto__btn" data-section="productos" data-value="boton">Ver producto</a>
+                        <button class="producto__btn" type="button" data-section="productos" data-value="boton">Ver producto</button>
                         <img src="img/estrellas.png" alt="Valoración: 5 estrellas" class="producto__estrellas">
                     </div>
                 </div>
@@ -161,7 +161,7 @@
                     <div class="producto__info">
                         <h4 class="producto__nombre" data-section="productos" data-value="titleMiel-3">Miel Pura - 250g</h4>
                         <p class="producto__descripcion" data-section="productos" data-value="descripcion-3">Pote compacto y práctico para regalar o viajar.</p>
-                        <a href="#" class="producto__btn" data-section="productos" data-value="boton">Ver producto</a>
+                        <button class="producto__btn" type="button" data-section="productos" data-value="boton">Ver producto</button>
                         <img src="img/estrellas.png" alt="Valoración: 5 estrellas" class="producto__estrellas">
                     </div>
                 </div>
@@ -174,7 +174,7 @@
                     <div class="producto__info">
                         <h4 class="producto__nombre" data-section="productos" data-value="titleMiel-4">Miel Pura - 40g</h4>
                         <p class="producto__descripcion" data-section="productos" data-value="descripcion-4">Perfecto para probar el sabor auténtico de nuestra miel.</p>
-                        <a href="#" class="producto__btn" data-section="productos" data-value="boton">Ver producto</a>
+                        <button class="producto__btn" type="button" data-section="productos" data-value="boton">Ver producto</button>
                         <img src="img/estrellas.png" alt="Valoración: 5 estrellas" class="producto__estrellas">
                     </div>
                 </div>
@@ -187,7 +187,7 @@
                     <div class="producto__info">
                         <h4 class="producto__nombre" data-section="productos" data-value="titleMiel-5">Pack Miel Pura - 20g</h4>
                         <p class="producto__descripcion" data-section="productos" data-value="descripcion-5">Mini frasco para souvenirs o degustaciones.</p>
-                        <a href="#" class="producto__btn" data-section="productos" data-value="boton">Ver producto</a>
+                        <button class="producto__btn" type="button" data-section="productos" data-value="boton">Ver producto</button>
                         <img src="img/estrellas.png" alt="Valoración: 5 estrellas" class="producto__estrellas">
                     </div>
                 </div>
