--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <div class="producto__info">
                         <h4 class="producto__nombre" data-section="productos" data-value="titleMiel">Miel Pura - 1kg</h4>
                         <p class="producto__descripcion" data-section="productos" data-value="descripcion">Frasco de vidrio, 100% miel natural sin conservantes.</p>
-                        <button class="producto__btn" type="button" data-section="productos" data-value="boton">Ver producto</button>
+                        <a href="#" class="producto__btn" data-section="productos" data-value="boton">Ver producto</a>
                         <img src="img/estrellas.png" alt="Valoración: 5 estrellas" class="producto__estrellas">
                      </div>
                 </div>
@@ -149,7 +149,7 @@
                     <div class="producto__info">
                         <h4 class="producto__nombre" data-section="productos" data-value="titleMiel-2">Miel Pura - 500g</h4>
                         <p class="producto__descripcion" data-section="productos" data-value="descripcion-2">Envase de vidrio, tamaño ideal para uso diario.</p>
-                        <button class="producto__btn" type="button" data-section="productos" data-value="boton">Ver producto</button>
+                        <a href="#" class="producto__btn" data-section="productos" data-value="boton">Ver producto</a>
                         <img src="img/estrellas.png" alt="Valoración: 5 estrellas" class="producto__estrellas">
                     </div>
                 </div>
@@ -162,7 +162,7 @@
                     <div class="producto__info">
                         <h4 class="producto__nombre" data-section="productos" data-value="titleMiel-3">Miel Pura - 250g</h4>
                         <p class="producto__descripcion" data-section="productos" data-value="descripcion-3">Pote compacto y práctico para regalar o viajar.</p>
-                        <button class="producto__btn" type="button" data-section="productos" data-value="boton">Ver producto</button>
+                        <a href="#" class="producto__btn" data-section="productos" data-value="boton">Ver producto</a>
                         <img src="img/estrellas.png" alt="Valoración: 5 estrellas" class="producto__estrellas">
                     </div>
                 </div>
@@ -175,7 +175,7 @@
                     <div class="producto__info">
                         <h4 class="producto__nombre" data-section="productos" data-value="titleMiel-4">Miel Pura - 40g</h4>
                         <p class="producto__descripcion" data-section="productos" data-value="descripcion-4">Perfecto para probar el sabor auténtico de nuestra miel.</p>
-                        <button class="producto__btn" type="button" data-section="productos" data-value="boton">Ver producto</button>
+                        <a href="#" class="producto__btn" data-section="productos" data-value="boton">Ver producto</a>
                         <img src="img/estrellas.png" alt="Valoración: 5 estrellas" class="producto__estrellas">
                     </div>
                 </div>
@@ -188,7 +188,7 @@
                     <div class="producto__info">
                         <h4 class="producto__nombre" data-section="productos" data-value="titleMiel-5">Pack Miel Pura - 20g</h4>
                         <p class="producto__descripcion" data-section="productos" data-value="descripcion-5">Mini frasco para souvenirs o degustaciones.</p>
-                        <button class="producto__btn" type="button" data-section="productos" data-value="boton">Ver producto</button>
+                        <a href="#" class="producto__btn" data-section="productos" data-value="boton">Ver producto</a>
                         <img src="img/estrellas.png" alt="Valoración: 5 estrellas" class="producto__estrellas">
                     </div>
                 </div>
