--- a/nosotros.html
+++ b/nosotros.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Corona Roja</title>
+    <title>Corona Roja Miel</title>
+    <meta name="description" content="Corona Roja produce miel 100% natural y artesanal en Córdoba, Argentina. Descubrí nuestros productos sin conservantes, directo del apicultor a tu mesa.">
+
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 
+    <!-- FUENTES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;900&family=Poppins:wght@500;600;700;900&display=swap" rel="stylesheet">
 
     <!-- STYLE -->
     <link rel="stylesheet" href="css/modernize.css">
@@ -18,7 +21,7 @@
 
 </head>
 <body>
-    <div class="barra" id="barra">
+    <header class="barra" id="barra">
 
         <div class="barra__flex contenedor">
             <div class="barra__img-container">
@@ -60,7 +63,7 @@
             </div>
 
         </div>
-    </div> 
+    </header> 
 
     <section class="nosotrosPag" id="nosotrosPag">
         <div class="contenedor">
@@ -78,7 +81,7 @@
             <!-- Imagen ilustrativa historia -->
             <div class="nosotrosPag__grid  scroll-hidden">
                 <div class="nosotrosPag__img-box">
-                    <img src="img/familia-nosotros.jpg" alt="Familia apicultora en Jujuy">
+                    <img src="img/familia-nosotros.jpg" alt="Familia apicultora en Jujuy de Corona Roja Miel">
                 </div>
                 <div class="nosotrosPag__content-box">
                     <h3 data-section="nosotrosPag" data-value="subtitle-1">De nuestra familia a la tuya</h3>
@@ -94,7 +97,7 @@
                     <p data-section="nosotrosPag" data-value="text-5">Trabajamos con prácticas responsables, porque creemos que el cuidado de las abejas es fundamental para el equilibrio del ecosistema.</p>
                 </div>
                 <div class="nosotrosPag__img-box">
-                    <img src="img/job-nosotros.jpg" alt="Compromiso ambiental">
+                    <img src="img/job-nosotros.jpg" alt="Compromiso ambiental de Corona Roja Miel">
                 </div>
             </div>
         
@@ -104,7 +107,7 @@
 
                 <div class="nosotrosPag__content">
                     <div class="nosotrosPag__img-box">
-                        <img src="img/nosotros-web.jpg" alt="" class="nosotrosPag__web">
+                        <img src="img/nosotros-web.jpg" alt="Avance hacia la tecnología de Corona Roja Miel" class="nosotrosPag__web">
                     </div>
                     <div class="nosotrosPag__contenido">
                         <p data-section="nosotrosPag" data-value="text-6">Hoy, después de años de trabajo, sentimos que es momento de dar un paso más y llevar Corona Roja al mundo digital. Queremos que más personas puedan disfrutar de nuestra miel y conocer la historia que hay detrás de cada frasco.</p>
