--- a/proceso.html
+++ b/proceso.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Corona Roja</title>
+    <title>Corona Roja Miel</title>
+    <meta name="description" content="Corona Roja produce miel 100% natural y artesanal en Córdoba, Argentina. Descubrí nuestros productos sin conservantes, directo del apicultor a tu mesa.">
+
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;900&family=Poppins:wght@500;600;700;900&display=swap" rel="stylesheet">
+    
     <!-- STYLE -->
     <link rel="stylesheet" href="css/modernize.css">
     <link rel="stylesheet" href="css/style.css">
@@ -18,7 +20,7 @@
 
 </head>
 <body>
-    <div class="barra" id="barra">
+    <header class="barra" id="barra">
 
         <div class="barra__flex contenedor">
             <div class="barra__img-container">
@@ -60,7 +62,7 @@
             </div>
 
         </div>
-    </div>
+    </header>
 
     <section class="proceso" id="proceso">
 
@@ -200,10 +202,9 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" alt="WhatsApp" />
     </a>
 
-    <!-- Swiper JS -->
+
     <script src="js/app.js"></script>
     <script src="js/idioma.js"></script>
     <script src="js/scroll.js"></script>
-
 </body>
 </html>
