--- a/nosotros.html
+++ b/nosotros.html
@@ -32,7 +32,7 @@
 
                 <ul class="navegacion__links">
                     <li class="navegacion__item">
-                        <a href="index.html" class="navegacion__enlace" data-section="barra__navegacion" data-value="inicio">Inicio</a>
+                        <a href="/" class="navegacion__enlace" data-section="barra__navegacion" data-value="inicio">Inicio</a>
                     </li>
 
                     <!-- <li class="navegacion__item">
