--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <title>Corona Roja Miel</title>
     <meta name="description" content="Corona Roja produce miel 100% natural y artesanal en Córdoba, Argentina. Descubrí nuestros productos sin conservantes, directo del apicultor a tu mesa.">
 
-
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;900&family=Poppins:wght@500;600;700;900&display=swap" rel="stylesheet">
-
 
     <!-- STYLE -->
     <link rel="stylesheet" href="css/modernize.css">
@@ -22,6 +20,10 @@
 
     <!-- Swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+    <link rel="preload" as="image" href="img/hero1.webp">
+    <link rel="preload" as="image" href="img/hero2.webp">
+    <link rel="preload" as="image" href="img/hero3.jpg">
 </head>
 <body>
     <header class="barra" id="barra">
@@ -338,7 +340,6 @@
 
     <script src="js/app.js"></script>
     <script src="js/cerrarModalySwiper.js "></script>
-    <script src="js/scroll.js"></script>
 
 </body>
 </html>
