Cambios realizados, Imagenes nuevas.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Corona Roja Miel</title>
-    <meta name="description" content="Corona Roja produce miel 100% natural y artesanal en Córdoba, Argentina. Descubrí nuestros productos sin conservantes, directo del apicultor a tu mesa.">
+    <meta name="description" content="Corona Roja produce miel 100% natural y artesanal en Cruz del Eje, Córdoba, Argentina. Descubrí nuestros productos sin conservantes, directo del apicultor a tu mesa.">
 
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 
@@ -234,8 +234,8 @@
 
                 <div class="nosotros__img-box">
                     <div class="hex hex1"><img src="img/nosotros.jpg" alt="Imagen Corona Roja Nosotros 1"></div>
-                    <div class="hex hex2"><img src="img/nosotros__abeja.jpg" alt="Imagen Corona Roja Nosotros 2"></div>
-                    <div class="hex hex3"><img src="img/nosotros__cajon.jpg" alt="Imagen Corona Roja Nosotros 3"></div>
+                    <div class="hex hex2"><img src="img/flor.png" alt="Flor de Cruz del Eje"></div>
+                    <div class="hex hex3"><img src="img/nosotros__cajon.jpg" alt="Nuestro lugar en cruz del Eje"></div>
                     <div class="hex hex4"><img src="img/nosotros__miel.jpg" alt="Imagen Corona Roja Nosotros 4"></div>
                     <div class="hex hex5"><img src="img/nosotros__job.jpg" alt="Imagen Corona Roja Nosotros 5"></div>
                 </div>
