--- a/nosotros.html
+++ b/nosotros.html
@@ -97,7 +97,7 @@
                     <p data-section="nosotrosPag" data-value="text-5">Trabajamos con prácticas responsables, porque creemos que el cuidado de las abejas es fundamental para el equilibrio del ecosistema.</p>
                 </div>
                 <div class="nosotrosPag__img-box">
-                    <img src="img/job-nosotros.jpg" alt="Compromiso ambiental de Corona Roja Miel">
+                    <img src="img/nosotros-compromiso.png" alt="Compromiso ambiental de Corona Roja Miel">
                 </div>
             </div>
         
